tests/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.rs
fn main() {}

impl T for () {

fn foo(&self) {}

trait T {
    fn foo(&self);
}

pub(crate) struct Bar<T>();

// ferrocene-annotations: fls_fk2m2irwpeof
// Implementations
//
// ferrocene-annotations: fls_85vx1qfa061i
// Traits

//~ ERROR this file contains an unclosed delimiter
